--- a/index.html
+++ b/index.html
@@ -5,12 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assesment</title>
-    <link rel="stylesheet" href="">
+    <title>Assesment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <div class="banner">
+        <img src="images/donation4.jpg" alt="Snow" style=" width:100%;">
+
+        <h1 class="centered">Let's All Provide More Food To The Food Victims </h1>
+    </div>
+
+    <div class="paragrapg">
+        <p>The floods in Bangladesh are thought to be the most severe in 100 years. More than a third of the country has
+            been submerged.</p>
+
+        <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Donate Now</a>
+
+    </div>
+    <div class="donatetoday">
+        <h1>Donate Today</h1>
+        <p>As much as you can afford, you donate for them.
+            Some of your money will save many lives. Thank you for your
+            donation.</p>
+    </div>
+
+    <div class="flex-container">
+        <div class="flex-box">250 BDT</div>
+        <div class="flex-box newdonete">350 BDT</div>
+        <div class="flex-box">450 BDT</div>
+        <div class="flex-box">550 BDT</div>
+    </div>
+
+    <div class="otherdonate-amount">
+        <h5>Other Amount (Taka)</h5>
+
+        <a class="amount-button" target="_blank" href="https://web.programming-hero.com/">Donate Now</a>
+
+    </div>
+
+    <div class="donateplan">
+        <h1>Our Donate Plan</h1>
+        <p class="dona-pera">Our plan is to provide food, shelter, school, college, etc. for the flood victims. We want
+            you to help us
+            too.</p>
+    </div>
+
+
+
+
+
+
 </body>
+<footer class="lastfooter">
+    <h1>Be Hemble</h1>
+    <p>I'm gonna do it</p>
+</footer>
 
 </html>
