--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
     </div>
 
     <div class="paragrapg">
-        <p>The floods in Bangladesh are thought to be the most severe in 100 years. More than a third of the country has
-            been submerged.</p>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
+            noluisse, enim</p>
 
         <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Donate Now</a>
 
     </div>
     <div class="donatetoday">
         <h1>Donate Today</h1>
-        <p>As much as you can afford, you donate for them.
-            Some of your money will save many lives. Thank you for your
-            donation.</p>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
     </div>
 
     <div class="flex-container">
