--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 
     <div class="donateplan">
         <h1>Our Donate Plan</h1>
-        <p class="dona-pera">Our plan is to provide food, shelter, school, college, etc. for the flood victims. We want
-            you to help us
-            too.</p>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+
+
     </div>
 
 
